--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/10-homepage/01-homepage-w-background-video.twig
@@ -90,7 +90,8 @@
       ],
       logo: {
         src: "/images/content/logos/logo-paypal.svg",
-        invert: true
+        invert: true,
+        lazyload: false
       },
       content: "Powered by real AI, Pega Customer Service delivers game-changing results for enterprises.",
       buttons: [
@@ -163,7 +164,8 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "lazyload": false
       },
       {
         "pattern": "video",
@@ -205,7 +207,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg"
+          "src": "/images/placeholders/1200x660.jpg",
+          "lazyload": false
         },
         {
           "pattern": "headline",
@@ -228,7 +231,8 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "lazyload": false
       },
       "teaser": {
         "eyebrow": {
@@ -263,7 +267,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+          "src": "/images/content/promos/promo-16x9-ai.jpg",
+          "lazyload": false
         },
         {
           "pattern": "teaser",
@@ -313,7 +318,8 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
+            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png",
+            lazyload: false
           } only %}
         {% endcell %}
 
@@ -360,7 +366,8 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/images/content/backgrounds/background-tall-4.jpg",
+        "lazyload": false
       },
       {
         "pattern": "video",
