--- a/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/04-page-examples/40-full-page-theming/_full-page-theming.twig
@@ -85,7 +85,8 @@
       ],
       logo: {
         src: "/images/content/logos/logo-paypal.svg",
-        invert: true
+        invert: true,
+        lazyload: false
       },
       content: "Powered by real AI," ~ bolt.link("Pega Customer Service", "google.com") ~ " delivers game-changing results for enterprises.",
       buttons: [
@@ -167,7 +168,8 @@
     "contentItems": [
       {
         "pattern": "image",
-        "src": "/images/sample/background-banner--left-focal-point.jpg"
+        "src": "/images/content/backgrounds/background-tall-1.jpg",
+        "lazyload": false
       }
     ]
   },
@@ -178,7 +180,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/placeholders/1200x660.jpg"
+          "src": "/images/placeholders/1200x660.jpg",
+          "lazyload": false
         },
         {
           "pattern": "headline",
@@ -201,7 +204,8 @@
     {
       "pattern": "card",
       "image": {
-        "src": "/images/sample/anthem-video.jpg"
+        "src": "/images/content/promos/promo-16x9-anthem.jpg",
+        "lazyload": false
       },
       "teaser": {
         "eyebrow": {
@@ -236,7 +240,8 @@
       "contentItems": [
         {
           "pattern": "image",
-          "src": "/images/sample/artificial-intelligence-image.jpg"
+          "src": "/images/content/promos/promo-16x9-ai.jpg",
+          "lazyload": false
         },
         {
           "pattern": "teaser",
@@ -286,7 +291,8 @@
 
         {% cell "u-bolt-width-1/1 u-bolt-width-1/3@small" %}
           {% include "@bolt/image.twig" with {
-            src: "/images/sample/salesforce-v-pega.png"
+            src: "/images/content/promos/promo-16x9-salesforce-vs-pega.png",
+            lazyload: false
           } only %}
         {% endcell %}
 
@@ -304,7 +310,7 @@
 
               <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall o-bolt-inline-list--valign-top">
               <li class="o-bolt-inline-list__item">
-                 
+
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
   <span class="c-bolt-text__text">
           Whiteboard
@@ -313,7 +319,7 @@
   </span>
         </li>
               <li class="o-bolt-inline-list__item">
-                 
+
 
 
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
@@ -325,10 +331,10 @@
 
         </li>
           </ul>
-             
+
               <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall o-bolt-inline-list--delimited o-bolt-inline-list--valign-top">
               <li class="o-bolt-inline-list__item">
-                 
+
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
   <span class="c-bolt-text__text">
           Whiteboard
@@ -337,7 +343,7 @@
   </span>
         </li>
               <li class="o-bolt-inline-list__item">
-                 
+
 
 
 <span class="c-bolt-text c-bolt-text--regular c-bolt-text--normal c-bolt-text--xsmall">
