--- a/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/00-background-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/backgrounds/00-background-docs.twig
@@ -1,4 +1,4 @@
-{#{% set schema = get_data('@bolt-components-background/background.schema.yml') %}#}
+{% set schema = get_data('@bolt-components-background/background.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-background/background.twig" with {
     opacity: "heavy",
