update band schema to yml

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/band/00-band-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/band/00-band-docs.twig
@@ -1,4 +1,4 @@
-{#{% set schema = get_data('@bolt-components-band/band.schema.yml') %}#}
+{% set schema = get_data('@bolt-components-band/band.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-band/band.twig" with {
   content: "Example Band Content",
