--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -37,7 +37,7 @@
 {% for collectionName in _allowedCollections %}
   {% if _context[collectionName] %}
     {% for key, item in _context[collectionName] if item.pattern in _allowedItems or key in _allowedItems %}
-      
+
       {% if item.buttons %}
         {% set buttons = item.buttons %}
         {% for button in buttons %}
@@ -46,7 +46,7 @@
           }) %}
           {% set _items = _items | merge([button]) %}
         {% endfor %}
-      
+
         {% set item = item | merge({
           "buttons": null
         }) %}
@@ -102,13 +102,13 @@
             {% else %}
               {{ item }}
             {% endif %}
-            
+
           {% endfor %}
         {% endblock %}
       {% endspaceless %}</div>
     {% endif %}
 
-    
+
     {% if block('card_body') is not empty %}
     <{{ contentTag }} class="{{ "#{baseClass}__body" }}">{% spaceless %}
       {% block card_body %}
@@ -120,7 +120,7 @@
           {% else %}
             {{ item }}
           {% endif %}
-          
+
         {% endfor %}
       {% endblock card_body %}
     {% endspaceless %}</{{ contentTag }}>
@@ -129,7 +129,7 @@
     {% if block('card_footer') is not empty %}
       <div class="{{ "#{baseClass}__footer" }}">{% spaceless %}
         {% block card_footer %}
-        
+
           {% for item in _items if item.pattern in _allowedCardFooterItems %}
             {% set paramOverrides = {
               itemAlignment: "left",
@@ -147,9 +147,13 @@
               {% endif %}
             </div>
           {% endfor %}
-         
+
         {% endblock card_footer %}
       {% endspaceless %}</div>
     {% endif %}
   </{{ tag }}>
 </bolt-card>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-card/card.schema.yml', _self) }}
+{% endif %}
