update card schema to yml format

--- a/apps/pattern-lab--workshop/src/_patterns/02-components/card/00-card-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/card/00-card-docs.twig
@@ -1,4 +1,4 @@
-{#{% set schema = get_data('@bolt-components-card/card.schema.yml') %}#}
+{% set schema = get_data('@bolt-components-card/card.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-card/card.twig" with {
   url: "javascript:",
