--- a/apps/pattern-lab--workshop/src/_patterns/02-components/page-header/00-page-header-docs.twig
+++ b/apps/pattern-lab--workshop/src/_patterns/02-components/page-header/00-page-header-docs.twig
@@ -1,3 +1,4 @@
+{% set schema = get_data('@bolt-components-page-header/page-header.schema.yml') %}
 {% set code %} {% verbatim %}
 {% include "@bolt-components-page-header/page-header.twig" with {
   "content": content,
@@ -6,6 +7,7 @@
 {% endset %}
 
 {% include '@utils/docs.twig' with {
+  schema: schema,
   code: code,
   readmeFile: '@bolt-components-page-header/README.md',
 } only %}
