schema cleanup for v1.0 (#454)
* update docs template to properly handly icons

* update headline schema to take cite and div tags

* fix broken image link

* add background schema

* update band schema to yml

* add breadcrumb and button group schema

* update card schema to yml format

* update card schema to yml format

* add missing schema for components demonstrated in PL

* add schema to missing pl docs so component title renders

* remove unused PL example files from image component

* fix typp on band schema

--- a/packages/components/bolt-card/src/card.twig
+++ b/packages/components/bolt-card/src/card.twig
@@ -175,3 +175,7 @@
     {% endif %}
   </{{ tag }}>
 </bolt-card>
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema('@bolt-components-card/card.schema.yml', _self) }}
+{% endif %}
