Refactoring nestedContent function

--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -1,5 +1,10 @@
-.docs-nav {
+.sub-nav {
   list-style-type: none;
   margin: 0;
   padding: 15px 0px 0;
+  &__link {
+    &--active {
+      font-weight: bold;
+    }
+  }
 }
