--- a/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
+++ b/apps/bolt-site--storefront/templates/partials/_sub-nav.scss
@@ -3,8 +3,13 @@
   margin: 0;
   padding: 15px 0px 0;
   &__link {
+    &--active-path {
+      text-decoration: underline;
+    }
     &--active {
       font-weight: bold;
+      text-decoration: none;
     }
+
   }
 }
