Refactoring Twig to use better approach of vars instead of blocks

--- a/apps/bolt-site--storefront/templates/home.twig
+++ b/apps/bolt-site--storefront/templates/home.twig
@@ -1,6 +1,9 @@
-{% extends 'site.twig' %}
-{% block content %}
+{% set content %}
   <article>
     {{ page.body|raw }}
   </article>
-{% endblock %}
+{% endset %}
+
+{% include 'site.twig' with {
+  content: content,
+} %}
