--- a/apps/bolt-site--storefront/templates/default.twig
+++ b/apps/bolt-site--storefront/templates/default.twig
@@ -1,7 +1,10 @@
-{% extends 'site.twig' %}
-{% block content %}
+{% set content %}
   <h2>{{ page.meta.title }}</h2>
   <article>
     {{ page.body|raw }}
   </article>
-{% endblock %}
+{% endset %}
+
+{% include 'site.twig' with {
+  content: content,
+} %}
