Adding conditional for sidebar that adds class

--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="/build/bolt-global.css">
 
+  {# Global Twig vars #}
   {% set urlChunks = page.url | split('/') %}
   {% set currentSection = urlChunks | length >= 1 ? urlChunks|first : '' %}
   {% set currentUrl = page.url %}
@@ -22,18 +23,22 @@
       {% set nestedPages = page.children %}
     {% endfor %}
   {% endif %}
+  {% set hasSidebar = nestedPages or sidebar %}
+  {# End Global Twig vars #}
 </head>
 <body class="storefront-docs">
 
-
-<div class="storefront-docs__content">
+{# @todo Incorporate new class into styles for when there is a sidebar and when there is not. ie: when no sidebar: make it 100% wide Jake #}
+<div class="storefront-docs__content {% if hasSidebar %} storefront-docs__content--has-sidebar{% endif %}">
   <div class="storefront-docs-wrapper">
-    {% if nestedPages %}
+    {% if hasSidebar %}
       <aside class="storefront-docs-sidebar">
         <h1>Bolt Design System</h1>
-        {% include 'partials/sub-nav.twig' with {
-          nestedPages: nestedPages,
-        } %}
+        {% if nestedPages %}
+          {% include 'partials/sub-nav.twig' with {
+            nestedPages: nestedPages,
+          } %}
+        {% endif %}
       </aside>
     {% endif %}
     <header class="storefront-docs-header">
@@ -66,14 +71,14 @@
 {# Shows Twig Vars in Browser Console #}
 <script type="application/json">{{ _context|json_encode()|raw }}</script>
 <script>
-    (function () {
-        var me = document.currentScript;
-        var jsonScriptTag = me.previousElementSibling.innerHTML;
-        var data = JSON.parse(jsonScriptTag);
-        console.log('Twig vars for this page: ', data);
-        console.table(data.site.pages);
+  (function () {
+    var me = document.currentScript;
+    var jsonScriptTag = me.previousElementSibling.innerHTML;
+    var data = JSON.parse(jsonScriptTag);
+    console.log('Twig vars for this page: ', data);
+    console.table(data.site.pages);
 //        console.table(data.site.pages);
-    })();
+  })();
 </script>
 
 <script src="/build/bolt-global.js"></script>
