refactor: add shorthand for specifying button type attribute

--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -145,6 +145,10 @@
 {% endif %}
 
 
+{# shorthand for manually setting HTML attribute `type` such as submit or reset #}
+{% if type %}
+  {% set attributes = attributes.setAttribute("type", type) %}
+{% endif %}
 
 {% set classes = [
   baseClass,
