--- a/src/_patterns/02-components/bolt-button/src/button.twig
+++ b/src/_patterns/02-components/bolt-button/src/button.twig
@@ -174,6 +174,10 @@
     {% if rounded %} rounded=" {{ rounded }}" {% endif %}
     {% if iconOnly %} icon-only="true" {% endif %}
     {% if disabled == true %} disabled {% endif %}
+
+    {# Failsafe to manually switch off Shadow DOM encapsulation #}
+    {% if noShadow %} no-shadow {% endif %}
+
     {% if target or attributes['target'] %} target="{{ target | default(attributes['target']) }}" {% endif %}
 
 
