--- a/src/_patterns/02-components/bolt-icon/src/icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/icon.scss
@@ -10,6 +10,8 @@ bolt-icon {
   // display: inline-flex;
   color: inherit;
   color: var(--bolt-color-icon, inherit);
+  width: 1em; // Default icon size if size prop not specified
+  height: 1em; // Default icon size if size prop not specified
 
   &:not(:resolved){
     padding-bottom: 100%; // Default square icons
