docs: adding additional button component test cases -- including buttons to submit forms -- as smoke tests for the updated button component

--- a/src/_patterns/02-components/bolt-button/demos/05-button-theming.twig
+++ b/src/_patterns/02-components/bolt-button/demos/05-button-theming.twig
@@ -18,5 +18,15 @@
       style: "text",
       "text": "Button Text"
     } %}
+
+    {% include "@bolt/button.twig" with {
+      style: "primary",
+      text: "Button Theming Override",
+      attributes: {
+        class: [
+          "_c-bolt-button--theme-override"
+        ]
+      }
+    } %}
   </section>
 {% endfor %}
