--- a/src/_patterns/02-components/bolt-button/demos/button--icon-only.twig
+++ b/src/_patterns/02-components/bolt-button/demos/button--icon-only.twig
@@ -1,3 +1,5 @@
+<p>Test case to verify icon-only buttons display just an icon + visually hidden text if content is defined.</p>
+
 {% include "@bolt/button.twig" with {
   "text": "Example Icon Only Button",
   "size": "xsmall",
