chore: fix code element to display inline so text does not break unexpectedly; update package.json with latest packages

--- a/src/_patterns/01-core/04-elements/elements-code/_elements.code.scss
+++ b/src/_patterns/01-core/04-elements/elements-code/_elements.code.scss
@@ -19,7 +19,7 @@ code {
   @include bolt-font-weight(semibold); // This is an edge case to use semibold.
   @include bolt-font-size(xsmall);
 
-  display: block;
+  display: inline;
   letter-spacing: 0.05rem;
   white-space: inherit;
 }
