--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -62,7 +62,7 @@
       <p>
         <strong>Copyright &copy; 2017 Pegasystems, Inc.</strong>
       </p>
-      {% set gitBranch = 'epic/refactor' %}
+      {% set gitBranch = 'feature/docs-site' %}
       <p><a href="https://github.com/bolt-design-system/bolt/blob/{{ gitBranch }}/apps/bolt-site--storefront/{{ page.srcPath }}">Edit this page on GitHub</a></p>
     </footer>
   </div>
