Fixing Bolt CLI output

--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -82,7 +82,7 @@
 </script>
 
 <script src="/build/bolt-global.js"></script>
-{# Code syntax highlighting - https://github.com/imsky/holder #}
+{# Code syntax highlighting - https://highlightjs.org/ #}
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/scss.min.js"></script>
