--- a/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab--workshop/src/_includes/utils/schema-docs.twig
@@ -106,38 +106,40 @@
 
 {% set requiredProps = schema.required %}
 
-<div class="c-bolt-docs-table">
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Value(s)</th>
-        <th>Description</th>
-        <th>Default</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      {% for key, prop in schema.properties %}
-        <tr class="c-bolt-docs-table__row">
-          <td class="c-bolt-docs-table__col c-bolt-docs-table__col--key">{{ key }}{% if key in requiredProps %} <span class="required-key" title="Required">*</span>{% endif %}</td>
-
-          <td class="c-bolt-docs-table__col"><code>{{ prop.type }}</code></td>
-
-          <td class="c-bolt-docs-table__col">{{ macros.schemaProps(prop) }}</td>
-
-          <td class="c-bolt-docs-table__col">{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
-
-          <td class="c-bolt-docs-table__col">
-            {% if prop.default %}
-              <code>{{ prop.default }}</code>
-            {% else %}
-              -
-            {% endif %}
-          </td>
+{% if schema.properties %}
+  <div class="c-bolt-docs-table">
+    <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Value(s)</th>
+          <th>Description</th>
+          <th>Default</th>
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+      </thead>
+
+      <tbody>
+        {% for key, prop in schema.properties %}
+          <tr class="c-bolt-docs-table__row">
+            <td class="c-bolt-docs-table__col c-bolt-docs-table__col--key">{{ key }}{% if key in requiredProps %} <span class="required-key" title="Required">*</span>{% endif %}</td>
+
+            <td class="c-bolt-docs-table__col"><code>{{ prop.type }}</code></td>
+
+            <td class="c-bolt-docs-table__col">{{ macros.schemaProps(prop) }}</td>
+
+            <td class="c-bolt-docs-table__col">{{ macros.titleAndDescription(prop.title, prop.description, prop.minimum, prop.maximum) }}</td>
+
+            <td class="c-bolt-docs-table__col">
+              {% if prop.default %}
+                <code>{{ prop.default }}</code>
+              {% else %}
+                -
+              {% endif %}
+            </td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+{% endif %}
