Making code blocks wrap

--- a/packages/global/styles/04-elements/_elements-code.scss
+++ b/packages/global/styles/04-elements/_elements-code.scss
@@ -6,6 +6,7 @@ pre {
   @include bolt-padding(medium);
   @include bolt-horizontal-scroll;
   text-align: left;
+  white-space: pre-wrap;
 }
 
 code {
