--- a/apps/bolt-site--storefront/templates/home.twig
+++ b/apps/bolt-site--storefront/templates/home.twig
@@ -1,9 +1,95 @@
 {% set content %}
   <article>
     {{ page.body|raw }}
+    {% include "@bolt-components-band/band--card-collection.twig" with {
+      theme: "light",
+      size: "medium",
+      contentItems: [
+        {
+          pattern: "card",
+          contentItems: [
+          {
+            pattern: "image",
+            lazyload: false,
+            src: "https://www.pega.com/sites/pega.com/files/thumbnail-forrester-prevcard.jpg"
+          },
+          {
+            pattern: "headline",
+            text: "Living, cohesive design language",
+            size: "large",
+          },
+          {
+            pattern: "text",
+            text: "An update to any component in the design system will roll out across every Wonderbly application, reducing variation and inconsistency in experience across our interface."
+          },
+          {
+            pattern: "button",
+            width: "full",
+            text: "Get the report",
+            style: "secondary"
+          }
+        ]
+        },
+        {
+          pattern: "card",
+          contentItems: [
+          {
+            pattern: "image",
+            lazyload: false,
+            src: "https://www.fillmurray.com/g/1200/660"
+          },
+          {
+            pattern: "teaser",
+            headlines: [
+            {
+              type: "headline",
+              text: "More efficiencie",
+              size: "large"
+            }
+          ],
+            content: "This single-source approach to building out our interface means we can create and iterate faster, whilst empowering engineers to implement design changes and deliver features with minimal upfront design work.",
+            buttons: [
+            {
+              text: "Learn More About Pega 7",
+              style: "secondary",
+              url: "www.google.com/pega7"
+            }
+          ]
+          }
+        ]
+        },
+        {
+          pattern: "card",
+          contentItems: [
+          {
+            pattern: "image",
+            lazyload: false,
+            src: "https://www.fillmurray.com/g/1200/660"
+          },
+          {
+            pattern: "teaser",
+            headlines: [
+            {
+              type: "headline",
+              text: "Tested, and trustworthy",
+              size: "large"
+            }
+          ],
+            content: "The design system has been tried and tested, it’s scalable to all devices, and strives to be AAA compliant with Web Content Accessibility Guidelines.",
+            buttons: [
+            {
+              text: "Learn More About Pega 7",
+              style: "secondary",
+              url: "www.google.com/pega7"
+            }
+          ]
+          }
+        ]
+        }
+      ]
+    } %}
   </article>
 {% endset %}
-
 {% include 'site.twig' with {
   content: content,
 } %}
