--- a/apps/bolt-site--storefront/templates/site.twig
+++ b/apps/bolt-site--storefront/templates/site.twig
@@ -31,9 +31,14 @@
 {# @todo Incorporate new class into styles for when there is a sidebar and when there is not. ie: when no sidebar: make it 100% wide Jake #}
 <div class="storefront-docs__content {% if hasSidebar %} storefront-docs__content--has-sidebar{% endif %}">
   <div class="storefront-docs-wrapper">
+    <h1 class="storefront-docs-title">
+      {% include "@bolt-components-icon/icon.twig" with {
+        name: "energy",
+        size: "medium",
+      }%} <span>BOLT DESIGN SYSTEM</span>
+    </h1>
     {% if hasSidebar %}
       <aside class="storefront-docs-sidebar">
-        <h1>Bolt Design System</h1>
         {% if nestedPages %}
           {% include 'partials/sub-nav.twig' with {
             nestedPages: nestedPages,
@@ -41,7 +46,7 @@
         {% endif %}
       </aside>
     {% endif %}
-    <header class="storefront-docs-header">
+    <header class="storefront-docs-header t-bolt-xdark">
       <nav class="storefront-docs-header__nav">
         {% for page in site.pages if page.meta.nav == 'main' %}
           {% set isActive = currentUrl == page.url %}
