--- a/apps/bolt-site--storefront/templates/site.scss
+++ b/apps/bolt-site--storefront/templates/site.scss
@@ -6,7 +6,7 @@
   color: #FFF;
   font-size: 18px;
   padding: 15px;
-  position: absolute;
+  position: fixed;
   top: 0;
   z-index: 100;
   letter-spacing: 2px;
@@ -39,7 +39,7 @@
   backface-visibility: hidden;
 
   @media (min-width: 768px) {
-    height: 294px;
+    height: 154px;
   }
 
   .storefront-docs__content--has-sidebar & {
@@ -98,7 +98,7 @@
   transition: margin .4s;
 
   @media (min-width: 768px) {
-    margin-top: 294px;
+    margin-top: 154px;
   }
 
   .storefront-docs__content--has-sidebar & {
